<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Box.net.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
See the License for the specific language governing permissions and 
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="#C8000000"
    >

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="#FFFFFF"
	    android:padding="10dp"
	    >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20dp"
	        android:textStyle="bold"
	        android:textColor="#000000"
	        android:text="@string/share"  
	        />
	    
        <TextView
            android:id="@+id/itemNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#666666"
            android:paddingTop="10dp"
            android:gravity="center" 
            />  
	        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16dp"
	        android:textColor="#666666"
	        android:paddingTop="10dp"
	        android:text="@string/email_addresses_comma_separated"  
	        />   
	        
        <EditText
            android:id="@+id/emailsInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="text"
            android:text=""
            />
	        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#666666"
            android:paddingTop="10dp"
            android:text="@string/message"  
            />   
            
        <EditText
            android:id="@+id/messageInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="text"
            android:text="@string/shared_from_sample_box_android_library_app"
            />	        
	        
       <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="10dp"
	        >    
		    <Button
		        android:id="@+id/shareButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/share"  
		        /> 	        
		    <Button
		        android:id="@+id/cancelButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cancel"  
		        /> 	    
	     </LinearLayout>    
   </LinearLayout>

</LinearLayout>
